[gd_scene load_steps=8 format=3 uid="uid://dhqo4rm3ey0cc"]

[ext_resource type="Script" uid="uid://v6n3ffl5k1l0" path="res://entities/resource.gd" id="1_cpix3"]
[ext_resource type="Texture2D" uid="uid://ce18klbbdd1cq" path="res://assets/tiles/field_tilesheet.png" id="1_txoar"]
[ext_resource type="Script" uid="uid://bmq23cvdp7yvu" path="res://highlight.gd" id="3_psx28"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cpix3"]
atlas = ExtResource("1_txoar")
region = Rect2(640, 128, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_psx28"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpix3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_txoar"]
radius = 56.5685

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_psx28"]
bg_color = Color(0.314656, 0.608943, 0.955922, 1)

[node name="Resource" type="Area2D"]
position = Vector2(360, 200)
collision_layer = 4
collision_mask = 0
script = ExtResource("1_cpix3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_psx28")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_txoar")

[node name="CircleVisual" type="Node2D" parent="."]
script = ExtResource("3_psx28")

[node name="CollectTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollectBar" type="ProgressBar" parent="."]
offset_left = -48.0
offset_top = 64.0
offset_right = 48.0
offset_bottom = 72.0
theme_override_styles/fill = SubResource("StyleBoxFlat_psx28")
max_value = 10.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="CollectTimer" to="." method="_on_collect_timer_timeout"]
